change publicKey.publicKey in publicKey.pub
